fix: Increasing screen height needed to display "Learn More" content due to observed overlap issues

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -133,7 +133,7 @@
     }
   }
 
-  @media only screen and (max-height : 650px) {
+  @media only screen and (max-height : 700px) {
     .learn-more,
     .learn-more-text {
       display: none;
